# planet-vk

./: CMakeLists.txt  README.md  config-builds  do-build  do-build-ci  requirements.cmake  resources.md
examples/: CMakeLists.txt
examples/2d/: 2d-example.cpp  CMakeLists.txt
examples/Twinklebear-sdl2_vulkan/: CMakeLists.txt  README.md  frag.frag  main.cpp  vert.vert  vertex.vert
examples/Twinklebear-sdl2_vulkan/cmake/: FindVulkan.cmake  SPIRV2C.cmake
examples/vulkan-tutorial/: 30_multisampling.cpp  CMakeLists.txt  README.md
include/planet/: vk-sdl.hpp  vk.hpp
include/planet/vk/: buffer.hpp  colour.hpp  commands.hpp  debug_messenger.hpp  descriptors.hpp  device.hpp  engine.hpp  engine2d.hpp  extensions.hpp  forward.hpp  frame_buffer.hpp  headless.hpp  helpers.hpp  image.hpp  instance.hpp  memory.hpp  memory_block_pool.hpp  owned_handle.hpp  physical_device.hpp  pipeline.hpp  queue.hpp  render_pass.hpp  shader_module.hpp  surface.hpp  swap_chain.hpp  synchronisation.hpp  texture.hpp  ubo.hpp  vertex.hpp  view.hpp
include/planet/vk/engine/: Coordinates.md  app.hpp  autodelete.hpp  autoupdater.hpp  blank.hpp  colour_attachment.hpp  depth_buffer.hpp  forward.hpp  mesh.pipeline.hpp  render_parameters.hpp  renderer.hpp  sprite.pipeline.hpp  textured.draw.hpp  textured.pipeline.hpp  ubo.hpp  ui.hpp
include/planet/vk/engine/memory/: pooled-vector-map.hpp
include/planet/vk/engine/pipeline/: lines.hpp  mesh.hpp  postprocess.hpp  sprite.hpp  textured.hpp  textured_quad.hpp
include/planet/vk/engine/postprocess/: glow.hpp
include/planet/vk/engine/ui/: autodelete.hpp  autoupdater.hpp  button.hpp  label.hpp  on_screen.hpp  per_frame.hpp  tx.hpp
include/planet/vk/engine2d/: app.hpp  forward.hpp  mesh.pipeline.hpp  renderer.hpp  sprite.pipeline.hpp  textured.pipeline.hpp  ui.hpp
include/planet/vk/engine2d/ui/: button.hpp  on_screen.hpp  per_frame.hpp
include/planet/vk/sdl/: texture.hpp  window.hpp
include/planet/vk/ubo/: coherent.hpp  coordinate_space.hpp  textures.hpp
include/planet/vk/vertex/: bindings.hpp  coloured.hpp  coloured_textured.hpp  forward.hpp  normal.hpp  normal_textured.hpp  textured.hpp  uvpos.hpp
src/: 2dmesh.vert  CMakeLists.txt  app.engine.cpp  app.engine2d.cpp  attachments.engine.cpp  blank.engine.cpp  colour.cpp  colour_attachment.engine.cpp  commands.cpp  copy.frag  copy.vert  depth_buffer.engine.cpp  descriptors.cpp  frame_buffer.cpp  glow.postprocess.cpp  headless.cpp  image.cpp  init.cpp  init.tests.cpp  lines.pipeline.cpp  memory.block_pool.cpp  memory.block_pool.tests.cpp  memory.cpp  memory.tests.cpp  mesh.frag  mesh.pipeline.cpp  mesh.screen.vert  mesh.vert  mesh.world.vert  pipeline.cpp  pooled-vector-map.tests.cpp  postprocess.blur.frag  postprocess.glow.frag  postprocess.pipeline.cpp  render_pass.cpp  renderer.engine.cpp  renderer.engine2d.cpp  sdl.cpp  shader-pipeline.cpp  sprite.frag  (+17 more)
